display users ID and broadcast total users when socket disconnects

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
         form p label, form p input{
             width: 150px
         }
+        #userIdTxt{
+            font-weight: bold
+        }
         
         #uploadFile {
             width: 0.1px;
@@ -53,7 +56,7 @@
 </head>
 
 <body>
-    <p><span id="total-users"></span><span id="pendings"></span></p>
+    <p><span id="userIdTxt"></span><span id="total-users"></span><span id="pendings"></span></p>
     <form id="authenticateUser">
         <p>
             <label for="UserEmail">User Email:</label><input type="text" id="UserEmail">
