--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Worker page</title>
     <style>
+        form {
+            border: 1px solid gray;
+            padding: 10px;
+            width: 500px;
+        }
+        
         form p{
             display: flex
         }
         form p label, form p input{
             width: 150px
         }
+
         #userIdTxt{
             font-weight: bold
         }
