fix and clean up

--- a/public/index.html
+++ b/public/index.html
@@ -1,88 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Worker page</title>
     <style>
-        form {
-            border: 1px solid gray;
-            padding: 10px;
-            width: 500px;
-        }
-        
-        form p{
-            display: flex
-        }
-        form p label, form p input{
-            width: 150px
-        }
+      form {
+        border: 1px solid gray;
+        padding: 10px;
+        width: 500px;
+      }
 
-        #userIdTxt{
-            font-weight: bold
-        }
-        
-        #uploadFile {
-            width: 0.1px;
-            height: 0.1px;
-            opacity: 0;
-            overflow: hidden;
-            position: absolute;
-            z-index: -1;
-        }
+      form p {
+        display: flex;
+      }
+      form p label,
+      form p input {
+        width: 150px;
+      }
 
-        #uploadFile+label, #bc_download {
-            font-size: 1em;
-            color: #e6e6f1;
-            background-color: #5d6b9d;
-            display: inline-block;
-            padding: 5px 8px;
-            border-radius: 4px;
-            text-align: center;
-            text-decoration: none;
-            cursor: pointer;
-        }
+      #userIdTxt {
+        font-weight: bold;
+      }
 
-        #uploadFile:focus+label,
-        #uploadFile+label:hover {
-            background-color: #7482d0;
-        }
+      .status-head {
+        display: flex;
+        justify-content: space-evenly;
+        width: 30%;
+        min-width: 450px;
+      }
 
-        #uploadFile:focus+label {
-            outline: 1px dotted #000;
-            outline: -webkit-focus-ring-color auto 5px;
-        }
+      #uploadFile {
+        width: 0.1px;
+        height: 0.1px;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        z-index: -1;
+      }
+
+      #uploadFile + label,
+      #bc_download {
+        font-size: 1em;
+        color: #e6e6f1;
+        background-color: #5d6b9d;
+        display: inline-block;
+        padding: 5px 8px;
+        border-radius: 4px;
+        text-align: center;
+        text-decoration: none;
+        cursor: pointer;
+      }
+
+      #uploadFile:focus + label,
+      #uploadFile + label:hover {
+        background-color: #7482d0;
+      }
+
+      #uploadFile:focus + label {
+        outline: 1px dotted #000;
+        outline: -webkit-focus-ring-color auto 5px;
+      }
     </style>
     <!-- <script src="https://unpkg.com/node-forge@0.7.0/dist/forge.min.js"></script> -->
     <!-- <link rel="stylesheet" href="assets/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
      -->
-</head>
+  </head>
 
-<body>
-    <p><span id="userIdTxt"></span><span id="total-users"></span><span id="pendings"></span></p>
+  <body>
+    <p class="status-head">
+      <span id="userIdTxt"></span>
+      <span id="total-users"></span>
+      <span id="pendings"></span>
+    </p>
     <form id="authenticateUser">
-        <p>
-            <label for="UserEmail">User Email:</label><input type="text" id="UserEmail">
-        </p>
-        <p>
-            <label for="UserPswd">Password:</label><input type="password" id="UserPswd">
-        </p>
-        <input type="radio" id="register" value="register" checked name="logType"><label for="register">Register</label>
-        <input type="radio" id="signin" value="signin" name="logType"><label for="signin">Login</label>
-        <br><br>
-        <input type="submit" value="Submit">
+      <p>
+        <label for="UserEmail">User Email:</label><input type="text" id="UserEmail" />
+      </p>
+      <p>
+        <label for="UserPswd">Password:</label><input type="password" id="UserPswd" />
+      </p>
+      <input type="radio" id="register" value="register" checked name="logType" /><label for="register">Register</label>
+      <input type="radio" id="signin" value="signin" name="logType" /><label for="signin">Login</label>
+      <br /><br />
+      <input type="submit" value="Submit" />
     </form>
     <form id="userTransaction"></form>
     <p>
-        <span id="statusmsg"></span>
-    </p>   
+      <span id="statusmsg"></span>
+    </p>
     <!-- <script src="myworker.js"></script> -->
     <script src="socket.io.js"></script>
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
