show remaining balance of current user after submit. Other css changes

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,7 @@
   <body>
     <p class="status-head">
       <span id="userIdTxt"></span>
-
-      <span id="pendings"></span>
+      <span id="balance-amt"></span>      
     </p>
     <p id="total-users"></p>
     <div id="allUsers"></div>
@@ -38,6 +37,9 @@
     <form id="userTransaction"></form>
     <p>
       <span id="statusmsg"></span>
+    </p>
+    <p>
+      <span id="pendings"></span>
     </p>
     <!-- <script src="myworker.js"></script> -->
     <script src="socket.io.js"></script>
